--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -32,10 +32,11 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: |
-        mkdir build
         cd build
         cmake .. 
         cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        pwd
+        ls
 
     - name: Test
       working-directory: ${{github.workspace}}/build
