--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -37,7 +37,7 @@ jobs:
         cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
         pwd
         ls
-
+        
     - name: Test
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.
@@ -45,8 +45,11 @@ jobs:
       run: ctest -C ${{env.BUILD_TYPE}}
 
 # https://github.com/marketplace/actions/discord-message-notify
-    - name: send custom message
-      uses: appleboy/discord-action@v1.2.0
-      with:
-        webhook_url: ${{ secrets.DISCORD_GITHUB_ACTION_CHANNEL_WEBHOOK }}
-        message: The ${{ github.event_name }} event triggered first step.
+  notify:
+    runs-on: self-hosted
+    steps:
+      - uses: appleboy/discord-action@v1.2.0
+      - name: send custom message
+        with:
+          webhook_url: ${{ secrets.DISCORD_GITHUB_ACTION_CHANNEL_WEBHOOK }}
+          message: The ${{ github.event_name }} event triggered first step.
