--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -48,8 +48,8 @@ jobs:
   notify:
     runs-on: self-hosted
     steps:
-      - uses: appleboy/discord-action@v1.2.0
       - name: send custom message
+        uses: appleboy/discord-action@v1.2.0
         with:
           webhook_url: ${{ secrets.DISCORD_GITHUB_ACTION_CHANNEL_WEBHOOK }}
           message: The ${{ github.event_name }} event triggered first step.
