fix: custom 메시지를 설정 안해놔서 비활성화

--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -53,4 +53,4 @@ jobs:
       uses: Aleph-Kim/discord-github-notification@v1.2.1
       with:
         discord-webhook-url: ${{ secrets.DISCORD_GITHUB_ACTION_CHANNEL_WEBHOOK }}
-        custom: true # 필수 X
+        # custom: true # 필수 X
