--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -49,8 +49,10 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: Discord Github Notification
-      uses: Aleph-Kim/discord-github-notification@v1.2.1
-      with:
-        discord-webhook-url: ${{ secrets.DISCORD_GITHUB_ACTION_CHANNEL_WEBHOOK }}
-        # custom: true # 필수 X
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_GITHUB_ACTION_CHANNEL_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
+
