--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -2,7 +2,10 @@
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
 name: CMake on a single platform
 
-run-name: Check [ ${{github.ref_name}} ] [ ${{github.event.head_commit.message}} ] 
+# run-name: Check [ ${{github.ref_name}} ] [ ${{github.event.head_commit.message}} ] 
+
+run-name: Check [ ${{github.run_number}} ] [ ${{github.event.head_commit.message}} ] 
+
 
 on:
   push:
